fixing extra space

--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@
   top: 0%;
   left: 0%;
   height: 100%;
-  width: 100vw;
+  width: 50vw;
   background-color: var(--darkColor);
   display: flex;
   justify-content: center;
